--- a/.github/workflows/startup.yml
+++ b/.github/workflows/startup.yml
@@ -9,9 +9,7 @@ jobs:
 
     steps:
     - name: Checkout own structure
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@v2
 
     - name: Create the folder structure
       run: |
@@ -21,18 +19,28 @@ jobs:
         mkdir -p repositories/StevenBlack/hosts
         touch repositories/blocklistproject/List/.gitkeep
         touch repositories/StevenBlack/hosts/.gitkeep
-
-    - name: Clone awesome repositories
-      uses: actions/checkout@v3
+        echo 'projects/' >> .gitignore
 
     - name: Cloning repository fortinet-compatible-lists...
-      run: git clone https://github.com/openthreatfeeds/fortinet-compatible-lists.git projects/fortinet-compatible-lists
+      uses: actions/clone@last
+      with:
+        repository: https://github.com/openthreatfeeds/fortinet-compatible-lists.git
+        path: projects/fortinet-compatible-lists
+        depth: 1
 
     - name: Cloning repository blocklistproject/Lists...
-      run: git clone https://github.com/blocklistproject/Lists.git repositories/blocklistproject/List
+      uses: actions/clone@last
+      with:
+        repository: https://github.com/blocklistproject/Lists.git
+        path: repositories/blocklistproject/List
+        depth: 1
 
     - name: Cloning repository StevenBlack/hosts...
-      run: git clone https://github.com/StevenBlack/hosts.git repositories/StevenBlack/hosts
+      uses: actions/clone@last
+      with:
+        repository: https://github.com/StevenBlack/hosts.git
+        path: repositories/StevenBlack/hosts
+        depth: 1
 
     - name: Create the new structure for the main-project
       run: |
@@ -50,15 +58,27 @@ jobs:
         git commit -m "Automated project initialization with GitHub actions"
         git push origin main
 
-    - name: Commit and push to the side-project
-      uses: actions/checkout@v3
+    - name: Configure git
+      uses: actions/setup-git@latest
       with:
-        repository: 'https://github.com/openthreatfeeds/fortinet-compatible-lists.git'
-        token: ${{ secrets.MAIN_PROJECT }}
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add .
-          git commit -m "Automated project initialization with GitHub actions"
-          git push origin main
         working-directory: projects/fortinet-compatible-lists
+
+    - name: Add
+      uses: git/add@latest
+      with:
+        path: ./projects/fortinet-compatible-lists
+
+    - name: Commit
+      uses: git/commit@latest
+      with:
+        message: "Automated project initialization with GitHub actions"
+        working-directory: projects/fortinet-compatible-lists
+
+    - name: Push
+      uses: git/push@latest
+      with:
+        repository: https://github.com/openthreatfeeds/fortinet-compatible-lists
+        branch: main
+        ref: HEAD
+        working-directory: projects/fortinet-compatible-lists
+        
