--- a/.github/workflows/startup.yml
+++ b/.github/workflows/startup.yml
@@ -1,5 +1,4 @@
 name: Create the main structure for the project, once.
-
 on:
   workflow_dispatch:
 
@@ -8,8 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
     - name: Checkout own structure
       uses: actions/checkout@v2
+      with:
+        depth: 1
 
     - name: Create the folder structure
       run: |
